# Openclaw-A2A

./: AGENTS.md  BUILD_RULES.md  README.md
audit/: README.md  __init__.py  logger.py  query.py
memory/: a2a-handoffs.md  a2a-task-queue.md
registry/: README.md  agent-cards.json
scripts/: a2a_task_router.py  build.sh  registry.py  run_a2a_server.py  send-a2a.py  start_all_servers.sh
sdk/python/: .gitignore  pyproject.toml
sdk/python/openclawa2a/: a2a_audit.py  agent_card.py  audit.py  client.py  exceptions.py  models.py  server.py  tracing.py
sdk/python/tests/: conftest.py  test_agent_card.py  test_audit.py  test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_server.py  test_tracing.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: send-task.js  send-task.ts
sdk/typescript/server/: a2a-server.js
sdk/typescript/src/: agent_card.ts  client.ts  index.ts  models.ts  server.ts
sdk/typescript/tests/: client.test.ts
skills/a2a-audit/: SKILL.md
skills/openclaw-a2a-coordination/: SKILL.md
